[gd_scene load_steps=9 format=3 uid="uid://drdxuuqdtlylr"]

[ext_resource type="Script" uid="uid://bmnon4mqkcmh1" path="res://placeables/code_button/code_button.gd" id="1_1dia2"]
[ext_resource type="Texture2D" uid="uid://bboyu1qx65be4" path="res://assets/tiles_ss.png" id="2_pgncj"]
[ext_resource type="Texture2D" uid="uid://ci3u237pksydm" path="res://assets/light.png" id="3_f4ly6"]
[ext_resource type="Theme" uid="uid://ctdduf6tq2qx6" path="res://assets/BOETHIUS_THEME.tres" id="4_wtdqh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dccxg"]
radius = 17.0294

[sub_resource type="Animation" id="Animation_dccxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("button:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}

[sub_resource type="Animation" id="Animation_bhl7q"]
resource_name = "glow"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("button:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.55]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8t8r"]
_data = {
&"RESET": SubResource("Animation_dccxg"),
&"glow": SubResource("Animation_bhl7q")
}

[node name="code_button" type="Area2D"]
collision_mask = 3
script = ExtResource("1_1dia2")

[node name="button" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_pgncj")
hframes = 8
vframes = 3
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dccxg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n8t8r")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.2
texture = ExtResource("3_f4ly6")
texture_scale = 0.5

[node name="CodeInput" type="VBoxContainer" parent="."]
offset_left = -63.0
offset_top = 41.0
offset_right = 63.0
offset_bottom = 104.0
theme = ExtResource("4_wtdqh")

[node name="Enter Code" type="Label" parent="CodeInput"]
layout_mode = 2
text = "Enter Code"

[node name="LineEdit" type="LineEdit" parent="CodeInput"]
layout_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="text_changed" from="CodeInput/LineEdit" to="." method="_on_line_edit_text_changed"]
